packages/wasm/src/tests/snapshots/wasm__tests__partition__broken_incomplete_fence_eof_diagnostics.snap
---
source: packages/wasm/src/tests/partition.rs
expression: render.diagnostics
---
[
  {
    "range": {
      "start": 23,
      "end": 23
    },
    "severity": "warning",
    "message": "unclosed raw block; inserted a closing fence",
    "hints": []
  }
]
