packages/wasm/src/tests/snapshots/wasm__tests__partition__broken_incomplete_fence_long_run_chunks.snap
---
source: packages/wasm/src/tests/partition.rs
expression: summarize(&render.chunks)
---
[
  {
    "range": [
      0,
      7
    ],
    "items": 4,
    "width": 63.76,
    "height": 21.12,
    "x": 0.0,
    "y": 0.0
  },
  {
    "range": [
      9,
      23
    ],
    "items": 10,
    "width": 30.21,
    "height": 88.38,
    "x": 0.0,
    "y": 62.72
  },
  {
    "range": [
      25,
      52
    ],
    "items": 5,
    "width": 94.64,
    "height": 90.48,
    "x": 0.0,
    "y": 192.7
  }
]
