packages/wasm/src/tests/snapshots/wasm__tests__partition__broken_incomplete_in_list_chunks.snap
---
source: packages/wasm/src/tests/partition.rs
expression: summarize(&render.chunks)
---
[
  {
    "range": [
      0,
      7
    ],
    "items": 10,
    "width": 64.56,
    "height": 21.12,
    "x": 0.0,
    "y": 0.0
  },
  {
    "range": [
      8,
      16
    ],
    "items": 5,
    "width": 35.68,
    "height": 12.0,
    "x": 18.8,
    "y": 30.48
  },
  {
    "range": [
      18,
      45
    ],
    "items": 10,
    "width": 94.64,
    "height": 90.48,
    "x": 0.0,
    "y": 63.44
  }
]
